@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: safe.tcl,v 1.41 2010/09/02 18:31:00 andreas_kupries Exp $
+# RCS: @(#) $Id: safe.tcl,v 1.41.2.1 2010/11/03 00:18:57 kennykb Exp $
 
 #
 # The implementation is based on namespaces. These naming conventions are
@@ -500,9 +500,9 @@ proc ::safe::InterpInit {
     # Sync the paths used to search for Tcl modules. This can be done only
     # now, after tm.tcl was loaded.
     namespace upvar ::safe S$slave state
-    ::interp eval $slave [list \
-	      ::tcl::tm::add {*}$state(tm_path_slave)]
-
+    if {[llength $state(tm_path_slave)] > 0} {
+	::interp eval $slave [list ::tcl::tm::add {*}$state(tm_path_slave)]
+    }
     return $slave
 }
 
