@@ -70,8 +70,6 @@ set TZData(:Asia/Hong_Kong) {
     {182889000 28800 0 HKT}
     {198617400 32400 1 HKST}
     {214338600 28800 0 HKT}
-    {230067000 32400 1 HKST}
-    {245788200 28800 0 HKT}
     {295385400 32400 1 HKST}
     {309292200 28800 0 HKT}
 }
