@@ -6,5 +6,5 @@ set TZData(:Pacific/Apia) {
     {-1861878784 -41400 0 SAMT}
     {-631110600 -39600 0 WST}
     {1285498800 -36000 1 WSDT}
-    {1301824800 -39600 0 WST}
+    {1301828400 -39600 0 WST}
 }
