@@ -10,5 +10,5 @@ set TZData(:Pacific/Fiji) {
     {1259416800 46800 1 FJST}
     {1269698400 43200 0 FJT}
     {1287842400 46800 1 FJST}
-    {1301148000 43200 0 FJT}
+    {1299333600 43200 0 FJT}
 }
